--- a/scene/i/companion-app-augmented-reality/index.html
+++ b/scene/i/companion-app-augmented-reality/index.html
@@ -88,7 +88,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak">An Information Layer</h3>
-        <p>Augmented reality may eventually take the form of traditional glasses and contact lenses, with informative graphics that appear in your field of view and react to the movements of your head in real time. While similar devices with applications already exist &ndash; namely smartphones like the iPhone &ndash; augmented reality screen space may soon be seen everywhere. The world, more than ever, is a playground—a place to include a digital layer of interaction with nearby restaurants, tourist attractions and historical sites and so on. It will be up to creatives at the forefront of this technology to imagine the possibilities and to help design the world we want to live in.</p>
+        <p>Augmented reality may eventually take the form of traditional glasses and contact lenses, with informative graphics that appear in your field of view and react to the movements of your head in real time. While similar devices with applications already exist &ndash; namely smartphones like the iPhone &ndash; augmented reality screen space may soon be seen everywhere. The world, more than ever, is a playground—a place to include a digital layer of interaction with nearby restaurants, tourist attractions and historical sites and all that. It will be up to creatives at the forefront of this technology to imagine the possibilities and to help design the world we want to live in.</p>
 
         <p class="linebreak"><i>But&hellip; There is such a thing as too much information.</i></p>
       </div>
