--- a/scene/i/elephant-conservation-angola/index.html
+++ b/scene/i/elephant-conservation-angola/index.html
@@ -192,7 +192,7 @@
 
         <!-- The spread of human population is a ticking time-bomb of problems. -->
 
-        <p class="linebreak">The reality Kerllen sees is that organizations like NGOWP, and like The HALO Trust, cannot sit back and do nothing. All along the Okavango watershed, international companies are beginning to survey the land for drilling and logging and mining and so on. Kerllen concedes, &ldquo;the outside world is coming for this region regardless.&rdquo; And he concludes that NGOWP has a responsibility to get there before the big oil companies and big tourism industries. An investment in removing the landmines also fuels a local economy. <i>The Okavango delta is an opportunity to do things differently.</i></p>
+        <p class="linebreak">The reality Kerllen sees is that organizations like NGOWP, and like The HALO Trust, cannot sit back and do nothing. All along the Okavango watershed, international companies are beginning to survey the land for logging and mining and all that. Kerllen concedes, &ldquo;the outside world is coming for this region regardless.&rdquo; And he concludes that NGOWP has a responsibility to get there before the big oil companies and big tourism industries. An investment in removing the landmines also fuels a local economy. <i>The Okavango delta is an opportunity to do things differently.</i></p>
 
       </div>
 
@@ -209,7 +209,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak" id="moremi-header">Guardians of the Okavango</h3>
-        <p>As more land mines from the decades-long civil war are decommissioned, more roads open up, and the outside world is encroaching into the isolated communities and the surrounding wilderness in Angola. The illegal commercial bushmeat trade has picked up as a result, as have unregulated development, charcoal production and logging and so on. The legal business of tourism lodges in a national reserve, however, remains complicated for some smaller local communities. Whether or not we consider humans as part of wilderness will inform how we conserve a place, Kerllen deliberates, &ldquo;and specifically its designation.&rdquo; A national park. A wilderness area. A privately owned tourist designation. Each of these have different implications for who can live and travel within the protected region.</p>
+        <p>As more land mines from the decades-long civil war are decommissioned, more roads open up, and the outside world is encroaching into the isolated communities and the surrounding wilderness in Angola. The illegal commercial bushmeat trade has picked up as a result, as have unregulated development, charcoal production and logging and all that. The legal business of tourism lodges in a national reserve, however, remains complicated for some smaller local communities. Whether or not we consider humans as part of wilderness will inform how we conserve a place, Kerllen deliberates, &ldquo;and specifically its designation.&rdquo; A national park. A wilderness area. A privately owned tourist designation. Each of these have different implications for who can live and travel within the protected region.</p>
 
         <p class="linebreak" id="moremi-toggle">History: <a class="color" onclick="toggle_moremi();">Moremi Reserve</a>.</p>
 
