--- a/scene/i/elephant-conservation-botswana/index.html
+++ b/scene/i/elephant-conservation-botswana/index.html
@@ -136,7 +136,7 @@
         <h3 class="linebreak">Botswana Without Borders</h3>
         <p>By 2007, Michael Chase and Kelly Landen co-founded Elephants Without Borders (EWB) and managed nearly fifty fitted satellite collars on elephants in northern Botswana, Namibia and Zambia. In 2007, this was the largest telemetry study of elephants. These telemetry studies, coupled with population assessments and trends brought to light in the aerial surveys undertaken by EWB, were used to delineate the boundaries of the KAZA TFCA&mdash;the agreement under which Botswana, Namibia, Zambia, Zimbabwe and Angola formally acknowledged that wildlife conservation transcended national boundaries.</p>
 
-        <p class="linebreak">By 2011, an aerial survey commissioned by the Botswana department of wildlife and national parks, conceptualized and led by Michael Chase and Kelly Landen of Elephants Without Borders, &ldquo;[made evident] a catastrophic loss of wildlife,&rdquo; according to Chase, eleven species were in serious decline in the delta. The declines were a result of a complex mix of local causes: human encroachment, game fences and poaching, fires and drought and so on. Elephants, however, were bucking the trend. Chase had an explanation:</p>
+        <p class="linebreak">By 2011, an aerial survey commissioned by the Botswana department of wildlife and national parks, conceptualized and led by Michael Chase and Kelly Landen of Elephants Without Borders, &ldquo;[made evident] a catastrophic loss of wildlife,&rdquo; according to Chase, eleven species were in serious decline in the delta. The declines were a result of a complex mix of local causes: human encroachment, fencing, poaching, fire and drought and all that. Elephants, however, were bucking the trend. Chase had an explanation:</p>
 
         <div class="clear-bottom">
           <p><b class="color">&ldquo;</b>We found the number of elephants in northern Botswana has stabilised at about 130,000. One reason is that they're returning to Angola. The country is remembered by a generation of elephants still alive today. They recognise the pathways to food and water and the timing of seasons. They remember where the hunters are. In a sense, they're Angolan refugees returning home.<b class="color">&rdquo;</b></p>
@@ -186,7 +186,7 @@
           </div>
         </div>
 
-        <p class="linebreak">In a twist of fate in 2018, an interim president of Botswana decided to lift a five-year ban on hunting elephants and so on.</p>
+        <p class="linebreak">In a twist of fate in 2018, an interim president of Botswana decided to lift a five-year ban on hunting elephants.</p>
 
         <p class="linebreak">The Botswana Democratic Party (BDP) was split when former president Ian Khama opposed his appointed successor and acting president, Mokgweetsi Masisi, for departing party values. Despite Khama coming out of political retirement to unite the opposition parties, the BDP was re-elected in 2019. The BDP has governed ever since Botswana's independence in 1966.</p>
 
