--- a/scene/i/history-of-elephants-anatomy/index.html
+++ b/scene/i/history-of-elephants-anatomy/index.html
@@ -61,7 +61,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak">Teeth and Tusks</h3>
-        <p>An elephant only has four molars at any one time, with two on top and two on bottom. These molars are located along both sides of the upper and lower jaw. Each molar is the size of a brick, and weighs up to about twenty pounds. An elephant can only grow six sets of these molars in a lifetime. These molars grind away from use all day, everyday. When the sixth set of molars is worn down from forever chewing fodder, the elephant is soon to starve, unable to supplement a diet with tree bark and so on.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
+        <p>An elephant only has four molars at any one time, with two on top and two on bottom. These molars are located along both sides of the upper and lower jaw. Each molar is the size of a brick, and weighs up to about twenty pounds. An elephant can only grow six sets of these molars in a lifetime. These molars grind away from use all day, everyday. When the sixth set of molars is worn down from forever chewing fodder, the elephant is soon to starve, unable to supplement a diet with tree bark and roots and all that.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
         <p class="linebreak">The life expectancy of an elephant in the wild is sixty to seventy years.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
@@ -75,7 +75,7 @@
 
         <p class="linebreak">For elephants, tusks are more than an indication of social stature. Elephants are either left-tusked or right-tusked. The tusk that an elephant uses most will appear a bit more worn down.</p>
 
-        <p class="linebreak">Elephants need their tusks to survive: to dig for roots and water and so on, to strip bark from trees, to clear pathways, and to defend themselves. Given a unique ability to smell water deep beneath the ground, elephants will use their tusks, along with their trunks and feet, to reach ground water that would otherwise be unreachable for all manner of smaller species. In this way, elephants have a disproportionately outsized impact on an ecosystem, with particular ecological importance as droughts become more severe and rains increasingly unpredictable.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
+        <p class="linebreak">Elephants need their tusks to survive: to dig for salts, roots and water, to strip bark from trees, to clear pathways, and to defend themselves. Given a unique ability to smell water deep beneath the ground, elephants will use their tusks, along with their trunks and feet, to reach ground water that would otherwise be unreachable for all manner of smaller species. In this way, elephants have a disproportionately outsized impact on an ecosystem, with particular ecological importance as droughts become more severe and rains increasingly unpredictable.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
         <!--
 
@@ -113,7 +113,7 @@
 
         <p class="linebreak">Elephants use their trunk to skim water holes for the clearer water settled at the surface. Elephants can contain about six to twelve litres &ndash; more than a gallon &ndash; of water in their trunk at a time, then spout the water into their mouths or otherwise. Elephants also reserve water in a pharyngeal pouch in their throat <i>for a sunny day</i>.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
 
-        <p class="linebreak">Elephants use their trunk to shower themselves with dust and mud and so on. This provides an effective sun-block that protects from ultraviolet rays and from parasites.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
+        <p class="linebreak">Elephants use their trunk to shower themselves with dust and mud and all that. This provides an effective sun-block that protects from ultraviolet rays and from parasites.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
 
         <p class="linebreak">Elephants use their trunk to collect vegetation and to uproot trees, as well as to interact and to communicate with others through smell, sound and touch.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
 
@@ -155,7 +155,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak">Skin, Skull, Ears and Eyes</h3>
-        <p>African elephant skin is gray and wrinkled, is over an inch thick in places, and has no sweat glands. The wrinkled skin helps to store moisture and keep an elephant cooler for longer after dusting and wallowing and so on. The creases and folds of the wrinkled skin also increase the surface area of skin in contact with air, allowing more blood that flows close to the surface to expel heat before recycling to the core.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
+        <p>African elephant skin is gray and wrinkled, is over an inch thick in places, and has no sweat glands. The wrinkled skin helps to store moisture and keep an elephant cooler for longer after dusting and wallowing and all that. The creases and folds of the wrinkled skin also increase the surface area of skin in contact with air, allowing more blood that flows close to the surface to expel heat before recycling to the core.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
         <p class="linebreak">The pattern of wrinkles, veins, lumps and bumps on the skin of an elephant is unique to each individual, and for researchers, helps to identify an elephant among a herd.</p>
 
@@ -181,7 +181,7 @@
       </div>
 
       <div>
-        <p>African elephant ears appear to resemble the shape of the African continent. This is different from Asian elephant ears which resemble the shape of India in Southwest Asia where they are found. Elephants will display their big ears to communicate aggression and submission and so on.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
+        <p>African elephant ears appear to resemble the shape of the African continent. This is different from Asian elephant ears which resemble the shape of India in Southwest Asia where they are found. Elephants will display their big ears to communicate aggression and submission and all that.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
 
         <p class="linebreak">Of course all elephants use their ears to hear. Elephants make &ndash; and listen for &ndash; a range of vocalizations, from high-pitched trumpets to infrasonic rumbles that resonate from miles away. Digital cushions on the soles of their feet indeed sense these distant rumbles, and then the skeletal structures of elephant forelegs and scapulae conduct these as vibrations to the inner ear. In this way, elephants are able to use infrasound to communicate over long distances.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
 
