--- a/scene/i/making-of-ella-2/index.html
+++ b/scene/i/making-of-ella-2/index.html
@@ -44,7 +44,7 @@
 
       <div>
         <h3>Pre-visualization</h3>
-        <p>This is an animatic: a pre-visualization of a visual story. The focus is placed on pacing and on a linear sequence of events. This is the <i>White Elephant</i> animatic, with comic book pages and panels fitted to the standard widescreen format. This working timeline for the story serves as a foundation for cinematography and audio engineering and so on.</p>
+        <p>This is an animatic: a pre-visualization of a visual story. The focus is placed on pacing and on a linear sequence of events. This is the <i>White Elephant</i> animatic, with comic book pages and panels fitted to the standard widescreen format. This working timeline for the story serves as a foundation for cinematography and audio engineering and all that.</p>
 
       </div>
 
