--- a/scene/ii/history-of-forests-trees/index.html
+++ b/scene/ii/history-of-forests-trees/index.html
@@ -149,7 +149,7 @@
       <div>
         <p>This extreme of Abstract Expressionism is reminiscent of Chinese or Japanese calligraphy. Like the art of calligraphy, the texture of the brush strokes in Abstract Expressionist and Abstract Impressionist art has an intentionality. The thickness of the paint medium and the weight of each stroke adds a directional, textural aesthetic. These pronounced qualities almost preserve a record of movement in space and time. Like timelapse photography, there is an impression of motion. These paintings are often referred to as action paintings because the layered, textured appearance characterizes the painter in motion in front of the canvas.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="D'Augustine, 2010.">3</a>]</sup></p>
 
-        <p class="linebreak">I look to appropriate these painterly aesthetics into a selection of studio works with cold wax and other impasto mediums and so on.</p>
+        <p class="linebreak">I look to appropriate these painterly aesthetics into a selection of studio works with cold wax and other impasto mediums and all that.</p>
 
         <p class="linebreak">As part of <a href="../the-beginning-of-painting/" title="Animat Habitat scene two. The Beginning of Painting.">The Beginning of Painting</a> at Animat Habitat &ndash; building up to an oil painting of an Amur tiger in the taiga &ndash; other works are underway. Of note is a diptych based on an abstract black-and-white pattern of vertical stripes. The stripes are mostly birch trees. The pattern of white trees and the spaces in-between will comprise the composition. The diptych is titled <i>White Birch</i>&mdash;an oil painting of a moose and a yellow-bellied sapsucker in the shade of a paper birch forest.</p>
 
@@ -212,7 +212,7 @@
         <h3 class="linebreak">The Forest</h3>
         <p>When painting a natural environment, for example a forest, what separates the trees from the forest is a sense of atmosphere. A misty morning. A dusty day. A partly opaque, particulated air that obfuscates or reflects the light source. This aesthetic appeals to Naturalist painters because of how mist or dust describes &ndash; and separates &ndash; the layers of a landscape.</p>
 
-        <p class="linebreak">Atmosphere is about space and the feeling of depth within that space. In a Naturalist painting there is depiction of the air&mdash;the vast volumes into the distance, the spaces between the trees, and the pathways through clumps of grass and so on.</p>
+        <p class="linebreak">Atmosphere is about space and the feeling of depth within that space. In a Naturalist painting there is depiction of the air&mdash;the vast volumes into the distance, the spaces between the trees and the pathways through clumps of grass and so on.</p>
 
         <p class="linebreak">Indeed this relates to painting birch trees in a morning mist. And indeed there is a painting of a birch forest as part of <i>the beginning of painting</i> at Animat Habitat. The feature painting for scene two at Animat Habitat, however, is made to tell the story of another forest: the taiga.</p>
 
@@ -249,7 +249,7 @@
         <h3 class="linebreak">The Trees</h3>
         <p><i>We need to plant trees. We need to make sure that trees grow. And making sure that trees grow is more complicated than planting them.</i></p>
 
-        <p class="linebreak">The problem however is with the economics and politics, not the logistics of planting trees. It is the problem with the extractive, myopic economic model of industrial aggriculture and industrial forestry and so on. Then there is the problem where in practice, and in policy, the environmental costs are too often overlooked.</p>
+        <p class="linebreak">The problem however is with the economics and politics, not the logistics of planting trees. It is the problem with the extractive, myopic economic model of industrial agriculture and industrial forestry and all that. Then there is the problem where in practice, and in policy, the environmental costs are too often overlooked.</p>
 
         <p class="linebreak">Our best step forward is to stop cutting down the healthy forests we have today. This means law enforcement needs to put and end to illegal logging. Consumers with purchasing power need to boycott the companies that are driving deforestation. And we &ndash; and our political representatives &ndash; need to steward the rights of Indigenous peoples who have a history of being stewards of the natural world. Where there is opportunity for reforestation, local communities need to see benefits from any new forests because they will need to be invested in keeping those trees growing.</p>
 
@@ -267,7 +267,7 @@
       </div>
 
       <div>
-        <p>As for painting a boreal forest for <i>White Tiger</i>, the pine trees are designed to appear in the background and appear blurred, bordering on Impressionism. There is a compressed sense of the spaces between the trees. The forest is altogether off in the distance. The layers of the forest catch the light en masse, and are designed to contrast with the deep colors and values of the subject in the foreground. In the midground there is atmosphere. This separation helps to flatten the focus of an otherwise Naturalist painting of a tiger to the tiger and to the eyes of the tiger and so on.</p>
+        <p>As for painting a boreal forest for <i>White Tiger</i>, the pine trees are set in the background, largely out of focus and, so, made to be blurred, bordering on Impressionism. There is a compressed sense of the spaces between the trees. Layers of the forest catch the light en masse. The forest, altogether off in the distance, faded into the light of a sky at dawn, stands in contrast with the intense colors and values of the subject in the foreground. In the midground there is atmosphere. This separation flattens the focus of an otherwise Naturalist painting of a tiger to the tiger expressely as a subject of art.</p>
 
       </div>
 
