--- a/conservation/africa/index.html
+++ b/conservation/africa/index.html
@@ -460,7 +460,7 @@
         </div>
 
         <div>
-          <p>This is a list of wild places in Africa &ndash; in large part where savanna elephants inhabit &ndash; that need to be preserved. An objective for wildlife conservation in Africa is to support and, in many cases, to reconnect wild places like these so that elephants and wildlife may migrate safely across park boundaries and navigate corridors between habitats, apart from human agriculture and development and so on. These wild places include protected habitats in the Republic of Kenya and a contingent of the Southern African Development Community (SADC).<sup>&nbsp;[<a class="button" onclick="fn();" title="SADC">3</a>]</sup></p>
+          <p>This is a list of wild places in Africa &ndash; in large part where savanna elephants inhabit &ndash; that need to be preserved. An objective for wildlife conservation in Africa is to support and, in many cases, to reconnect wild places like these so that elephants and wildlife may migrate safely across park boundaries and navigate corridors between habitats, apart from human agriculture and development and all that. These wild places include protected habitats in the Republic of Kenya and a contingent of the Southern African Development Community (SADC).<sup>&nbsp;[<a class="button" onclick="fn();" title="SADC">3</a>]</sup></p>
 
         </div>
       </div>
