--- a/scene/i/history-of-elephants-ivory/index.html
+++ b/scene/i/history-of-elephants-ivory/index.html
@@ -368,8 +368,8 @@
             <!-- President Idriss Deby of Chad commits to destroying ivory stockpile amongst range of elephant protection measures
             //africanparks.org/newsroom/press-releases/president-idriss-deby-chad-commits-destroying-ivory-stockpile-amongst-range-elephant-protection-measures -->
 
-          <p class="small"><sup>33</sup>&nbsp; Elephants Without Borders (EWB), Great Elephant Census. <a href="../../../url/-org/elephantswithoutborders-great-elephant-census/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
-          <p class="small"><sup>&plus;</sup>&nbsp; Paul Allen, Great Elephant Census. <a href="../../../url/-com/greatelephantcensus-the-census/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>33</sup>&nbsp; Elephants Without Borders (EWB), Great Elephant Census. <a href="../../../url/-org/elephantswithoutborders-great-elephant-census/" title="Elephants Without Borders / Great Elephant Census" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>&plus;</sup>&nbsp; Paul Allen, Great Elephant Census. <a href="../../../url/-com/greatelephantcensus-the-census/" title="Paul Allen / Great Elephant Census" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
@@ -393,11 +393,11 @@
 
           <p class="small"><sup>36</sup>&nbsp; Neme, L. <i>A Voice for Elephants</i>, &lsquo;Ethiopia Burns Entire 6.1-Ton Ivory Stockpile&rsquo;, 2015. <a href="../../../url/-com/laurelneme-ethiopia-burns-entire-6-1-ton-ivory-stockpile/" title="Laurel Neme / National Geographic: Ethiopia Burns Entire 6.1-Ton Ivory Stockpile" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <p class="small"><sup>37</sup>&nbsp; Wildlife Conservation Society (WCS), &lsquo;Congo Republic burns its entire stockpile of seized ivory&rsquo;, 2015. <a href="../../../url/-org/wcs-congo-republic-burns-its-entire-stockpile-of-seized-ivory/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>37</sup>&nbsp; Wildlife Conservation Society (WCS), &lsquo;Congo Republic burns its entire stockpile of seized ivory&rsquo;, 2015. <a href="../../../url/-org/wcs-congo-republic-burns-its-entire-stockpile-of-seized-ivory/" title="Wildlife Conservation Society / Congo Republic burns its entire stockpile of seized ivory" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <p class="small"><sup>38</sup>&nbsp; CITES, &lsquo;CITES remarks to the first destruction of confiscated elephant ivory in the United Arab Emirates&rsquo;, 2015. <a href="../../../url/-org/cites-uae-ivory-destruction-2015/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>38</sup>&nbsp; CITES, &lsquo;CITES remarks to the first destruction of confiscated elephant ivory in the United Arab Emirates&rsquo;, 2015. <a href="../../../url/-org/cites-uae-ivory-destruction-2015/" title="CITES / CITES remarks to the first destruction of confiscated elephant ivory in the United Arab Emirates" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <p class="small"><sup>39</sup>&nbsp; US FWS, &lsquo;United States Destroys Confiscated Elephant Ivory in Times Square&rsquo;, 2015. <a href="../../../url/-gov/fws-2015-united-states-destroys-confiscated-elephant-ivory-times-square/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>39</sup>&nbsp; US FWS, &lsquo;United States Destroys Confiscated Elephant Ivory in Times Square&rsquo;, 2015. <a href="../../../url/-gov/fws-2015-united-states-destroys-confiscated-elephant-ivory-times-square/" title="USFWS / United States Destroys Confiscated Elephant Ivory in Times Square" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
           <p class="small"><sup>40</sup>&nbsp; TRAFFIC, &lsquo;Vital Evidence Goes up in Smoke&rsquo;, 2015. <a href="../../../url/-org/traffic-vital-evidence-goes-up-in-smoke/" title="TRAFFIC / Vital Evidence Goes up in Smoke" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
