--- a/scene/i/wildlife-documentary-lens/index.html
+++ b/scene/i/wildlife-documentary-lens/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>By wrestling a precious particle of the world from time and space and holding it absolutely still, a great photograph can explode the totality of our world, such that we never see it quite the same again.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Draper, R. &lsquo;The Power of Photography&rsquo;, p&nbsp;31-32, National Geographic, October 2013. [<a href="../../../url/nationalgeographic/archive-2013-oct/" class="color" rel="noopener" target="_blank" title="">nationalgeographic.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>By wrestling a precious particle of the world from time and space and holding it absolutely still, a great photograph can explode the totality of our world, such that we never see it quite the same again.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Draper, R. &lsquo;The Power of Photography&rsquo;, p&nbsp;31-32, National Geographic, October 2013. [<a href="../../../url/nationalgeographic/archive-2013-oct/" class="color" rel="noopener" target="_blank" title="National Geographic / October 2013 / The Power of Photography">nationalgeographic.com</a>]</font></h4>
 
         <!-- [The art of photography] is on this hyper-egalitarian, quasi-Orwellian, all-to-camera-ready terra infirma that National Geographic’s photographers continue to stand out. Why they do so is only partly explained by the innately personal choices (which lens for which lighting for which moment) that help define a photographer’s style. Instead, the very best of their images remind us that a photograph has the power to do infinitely more than document. It can transport us to unseen worlds. -->
 
@@ -114,11 +114,11 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Yong, E. &lsquo;An interview with David Attenborough&rsquo;, National Geographic. December 29, 2008. <a href="../../../url/nationalgeographic/an-interview-with-david-attenborough/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>1</sup> Yong, E. &lsquo;An interview with David Attenborough&rsquo;, National Geographic. December 29, 2008. <a href="../../../url/nationalgeographic/an-interview-with-david-attenborough/" title="National Geographic / December 2008 / An interview with David Attenborough" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <p class="small"><sup>2</sup> Pierce, D. &lsquo;The Crazy New Camera Tech That Made Planet Earth II Possible&rsquo;, Wired. March 26, 2017. <a href="../../../url/wired/crazy-new-camera-tech-made-planet-earth-2-possible/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>2</sup> Pierce, D. &lsquo;The Crazy New Camera Tech That Made Planet Earth II Possible&rsquo;, Wired. March 26, 2017. <a href="../../../url/wired/crazy-new-camera-tech-made-planet-earth-2-possible/" title="Wired / March 2017 / The Crazy New Camera Tech That Made Planet Earth II Possible" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <p class="small"><sup>3</sup> Slenske, M. &lsquo;All Creatures Great, Small&hellip; And Endangered&rsquo;, New York Times. March 18, 2007. <a href="../../../url/nytimes/2007-03-18-arts-television/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>3</sup> Slenske, M. &lsquo;All Creatures Great, Small&hellip; And Endangered&rsquo;, New York Times. March 18, 2007. <a href="../../../url/nytimes/2007-03-18-arts-television/" title="New York Times / March 2007 / All Creatures Great, Small And Endangered" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
@@ -223,7 +223,7 @@
         <div class="quote" id="footnotes-2">
           <p class="small"><sup>4</sup> Fong, J and Lee, D. &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox. February 20, 2017. <a href="../../../url/vox/making-of-planet-earth-2/" title="Vox / Making of Planet Earth 2" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <!-- <p class="small"><sup></sup> Youngs, I. BBC News. July 24, 2014. <a href="../../../url//" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p> -->
+          <!-- <p class="small"><sup></sup> Youngs, I. BBC News. July 24, 2014. <a href="../../../url//" title="BBC News / July 2014 / ..." target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p> -->
           <!-- bbc.com/news/entertainment-arts-28405412 -->
 
         </div>
@@ -321,9 +321,9 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-4">
-          <p class="small"><sup>5</sup> Nguyen, H. &lsquo;<i>Planet Earth II</i> Producers Reveal 6 Sneaky Ways They Filmed Their Animal Stars&rsquo;, IndieWire. February 15, 2017. <a href="../../../url/indiewire/planet-earth-2-filmmaking/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>5</sup> Nguyen, H. &lsquo;<i>Planet Earth II</i> Producers Reveal 6 Sneaky Ways They Filmed Their Animal Stars&rsquo;, IndieWire. February 15, 2017. <a href="../../../url/indiewire/planet-earth-2-filmmaking/" title="IndieWire / February 2017 / Planet Earth II Producers Reveal 6 Sneaky Ways They Filmed Their Animal Stars" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <p class="small"><sup>6</sup> Bryant, W C. &lsquo;How <i>Planet Earth</i> Works&rsquo;, How Stuff Works. <a href="../../../url/howstuffworks/planet-earth/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>6</sup> Bryant, W C. &lsquo;How <i>Planet Earth</i> Works&rsquo;, How Stuff Works. <a href="../../../url/howstuffworks/planet-earth/" title="How Stuff Works / How Planet Earth Works" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
