--- a/scene/ii/history-of-forests-trees/index.html
+++ b/scene/ii/history-of-forests-trees/index.html
@@ -41,7 +41,7 @@
       <div>
         <h4 class="letterhead thin">March 2023</h4>
         <h2 class="color">The Forest Behind the Trees</h2>
-        <h5 class="author">Press secretary at Animat Habitat.</h5>
+        <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>The big picture behind the paintings&mdash;where this medium of painting can still overshadow that of photography, in a textural, visual language of layered brush marks, there is fashioned an aesthetic foundation for artistic interpretation of the world. As such, a Naturalist painting does not just show another moose or yellow-bellied sapsucker&hellip; Another pair of apes or tigers&hellip; Another whale&hellip; A Naturalist painting, while grounded in the beauty of the natural world, serves to make a statement about nature. There is a raison d'être&mdash;a reason for why the painting was worth making&mdash;worth the time obliged to put paint on canvas and into perspective and all that. And still, there rests a sense of environment or setting or space. A forest, for example, with old pines and the cold breaths billowed between the trees.</i></p>
 
